some font sizing and spacing fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 html {
   scroll-behavior: smooth;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 * {
@@ -196,7 +196,7 @@ h3,
 
 .plant-lover {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -231,10 +231,13 @@ h3,
 }
 
 .plant-lover-right {
-  width: 45%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  li{
+    font-size: 1.2rem;
+  }
 }
 
 .latest-deals {
